  (of any supported format) from the web
- "kalman": allow a constant term in the state transition
  equation
- "modprint" command: allow a string literal for the second
  argument; support both comma- and space-separation of 
  parameter names
- pdf function: support the poisson and binomial distributions
  (giving the probability mass)
- New function invmills() to get the inverse Mills ratio
- New accessor $mnl_probs to get the estimated outcome
  probabilities for a multinomial logit model (plus GUI
  access under the Analysis menu in the model window)
- Fix for multinomial logit: correct bias in favor of the
  base case in the reported fitted values ($yhat)  
- Fix bug 3021540 (sorting dataset)
- Fix bug 3021854 (spreadsheet import with no numeric data)
- Fix crashing bug in Wilcoxon signed rank test
- Fix bug: crash in GUI when estimation of a restricted VECM
  was not successfully completed
- Fix for OS X: we now support Ctrl-click as equivalent to
  right-click (for popup menus, etc.)
- Fix for finding user's customized LaTeX preamble file 
- Fix: more rigorous detection of whether TeX output is PDF
  rather than DVI
- Traditional Chinese locale: encode text to CP950 for EMF
  files via gnuplot
- Drag-and-drop onto gretl main window: support database files
  (gretl native, RATS or PcGive) as well as regular data files
- Internals: modify GUI sources to ensure that gretl will build 
  OK with the forthcoming GTK+ 3.0

2010-06-24 version 1.9.1
- New command: "makepkg", for command-line creation of gretl
  function packages (.gfn files)
- pdf, cdf and pvalue functions: add support for the
  Generalized Error distribution
- "dataset" command: add new sub-command, "renumber", for
  moving a series to a new position
- wls: amend the criterion for complaining that the weights
  are all zero
- logit/probit: correct ordering of estimates when the
  constant is not first in the supplied list of regressors
- Reading gdt data files: don't stop if a denormalized tiny