@@ -17,6 +17,7 @@
 <!ENTITY mdash  "&#8212;">
 <!ENTITY latex  "LaTeX">
 <!ENTITY minus  "&#8211;">
+<!ENTITY deg    "&#0176;">
 <!ENTITY par    "">
 <!ENTITY eg     "e.g.">
 <!ENTITY ie     "i.e.">
