@@ -223,6 +223,7 @@
 	<menuitem action="FilterEMA"/>
 	<menuitem action="FilterHP"/>
 	<menuitem action="FilterBK"/>
+	<menuitem action="FilterBW"/>
 	<menuitem action="FilterFD"/>
       </menu>
       <placeholder action="X12A"/>
